--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 
@@ -11,8 +12,10 @@ task wrapper(type: Wrapper) {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.3'
+
     testCompile 'junit:junit:4.11'
 }
+
 repositories {
 	mavenLocal()
     mavenCentral()
